# PalioBoard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  REDLINING.md  TODO.md  error-catalog-refactor-plan.md  pyproject.toml
apps/api/: .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
apps/api/migrations/: README.md  env.py
apps/api/migrations/versions/: 20260314_0001_create_palio_board_schema.py
apps/api/src/palio/: __init__.py  settings.py
apps/api/src/palio/api/: __init__.py  dependencies.py  main.py
apps/api/src/palio/api/middleware/: __init__.py  request_logging.py
apps/api/src/palio/api/routes/: __init__.py  admin.py  meta.py  public.py  realtime.py
apps/api/src/palio/app/: __init__.py  bootstrap.py  export_openapi.py  factory.py  main.py  unit_of_work.py
apps/api/src/palio/app/observability/: __init__.py  logging.py  request_context.py  request_logging.py
apps/api/src/palio/app/routes/: __init__.py  admin.py  meta.py  public.py  realtime.py
apps/api/src/palio/bootstrap/: __init__.py  app_services.py  export_openapi.py  factory.py  logging.py  main.py  runtime.py  transaction_services.py  wiring.py
apps/api/src/palio/bootstrap/db/: __init__.py  config.py  runtime.py
apps/api/src/palio/db/: __init__.py  config.py  runtime.py  unit_of_work.py
apps/api/src/palio/infrastructure/: __init__.py
apps/api/src/palio/infrastructure/db/: __init__.py  runtime.py  transaction.py  unit_of_work.py
apps/api/src/palio/modules/: __init__.py
apps/api/src/palio/modules/audit/: __init__.py  facade.py
apps/api/src/palio/modules/authorization/: __init__.py  facade.py
apps/api/src/palio/modules/event_operations/: __init__.py  facade.py
apps/api/src/palio/modules/identity/: __init__.py  facade.py
apps/api/src/palio/modules/leaderboard_projection/: __init__.py  facade.py
apps/api/src/palio/modules/live_games/: __init__.py  facade.py
apps/api/src/palio/modules/public_read/: __init__.py  facade.py
apps/api/src/palio/modules/results/: __init__.py  facade.py
apps/api/src/palio/modules/season_setup/: __init__.py  facade.py
apps/api/src/palio/modules/tournaments/: __init__.py  facade.py
apps/api/src/palio/shared/: __init__.py  error_code.py  module_boundaries.py  module_facade.py
apps/api/tests/: __init__.py  test_app.py  test_db_runtime.py  test_module_boundaries.py  test_openapi_export.py  test_settings.py
apps/api/tests/integration/: __init__.py  conftest.py  error_endpoint_support.py  test_app.py  test_error_endpoint_flow.py  test_migrations.py
apps/api/tests/integration/shared/: __init__.py
apps/api/tests/support/: __init__.py  postgres.py
apps/api/tests/unit/: __init__.py  test_app.py  test_app_services.py  test_db_runtime.py  test_error_handlers.py  test_module_boundaries.py  test_openapi_export.py  test_postgres_support.py  test_sqlalchemy_unit_of_work.py  test_uow_factory.py
tools/error_codegen/: pyproject.toml
tools/error_codegen/src/error_codegen/: __init__.py  cli.py  common.py  loader.py  models.py  validators.py
tools/error_codegen/src/error_codegen/generators/: __init__.py  common.py  docs.py  python.py  typescript.py
tools/error_codegen/src/error_codegen/templates/: error_contract.md.j2  python_errors.py.j2  ts_error_codes.ts.j2
tools/error_codegen/tests/: __init__.py  conftest.py  test_cli.py  test_error_catalog.py  test_generate_error_docs.py  test_generate_python_errors.py  test_generate_ts_errors.py
tools/error_codegen/tests/fixtures/scenarios/: README.md  SCENARIO_MATRIX.md
tools/error_codegen/tests/integration/: test_cli.py  test_cli_smoke.py  test_generate_api_mappings_invariants.py  test_generate_api_problem_specs_invariants.py  test_generate_artifacts.py  test_generate_docs_invariants.py  test_generate_python_invariants.py  test_generate_typescript_invariants.py  test_loader.py  test_scenario_inventory.py  test_validate_failure_catalogs.py  test_validate_success_catalogs.py
tools/error_codegen/tests/snapshots/docs/: error-catalog-section.md  error-contract-base.md  error-contract.md
tools/error_codegen/tests/snapshots/python/: event_operations_error_defs_gen.py
tools/error_codegen/tests/snapshots/typescript/: error-codes.generated.ts
tools/error_codegen/tests/support/: __init__.py  adapters.py  catalog_paths.py  error_catalog.py  expectations.py  generated_contract.py  sample_catalog.py  scenarios.py  text_helpers.py
tools/error_codegen/tests/unit/: test_api_mappings.py  test_api_problem_specs.py  test_cli_prototype.py  test_docs_generator_helpers.py  test_docs_rendering.py  test_helpers.py  test_models.py  test_python_generator_helpers.py  test_python_rendering.py  test_typescript_generator_helpers.py  test_typescript_rendering.py  test_validators.py
(+461 files in other folders)
