[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "palio-api"
version = "0.1.0"
description = "FastAPI backend scaffold for the PalioBoard modular monolith."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0,<2.0.0",
    "fastapi[standard]>=0.116.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pytest>=8.3.0,<9.0.0",
    "sqlalchemy>=2.0.38,<3.0.0",
    "pyyaml>=6.0,<7.0",
    "typer>=0.24,<1.0",
    "uuid6>=2025.0.1,<2026.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/palio"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
