[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "palio-api"
version = "0.1.0"
description = "FastAPI api scaffold for the PalioBoard modular monolith."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0,<2.0.0",
    "fastapi[standard]>=0.116.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "sqlalchemy>=2.0.38,<3.0.0",
    "uuid6>=2025.0.1,<2026.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pre-commit>=4.3.0,<5.0.0",
    "pyright>=1.1.405,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pyyaml>=6.0,<7.0",
    "ruff>=0.12.0,<0.13.0",
    "testcontainers[postgres]>=4.13.0,<5.0.0",
    "typer>=0.24,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/palio"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that require a real local PostgreSQL database",
]


# -------------------------------
# Ruff: formatter + linter config
# -------------------------------
[tool.ruff]
src = ["src", "tests"]
target-version = "py312"
[tool.ruff.lint]
select = [  
  "E",   # pycodestyle
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # import sorting
  "B",   # bugbear
  "UP",  # pyupgrade / modern Python
  "C4",  # comprehensions
  "SIM", # simplifications
  "RUF", # ruff-specific rules
  "ISC", # implicit string concatenation
  "ARG", # unused arguments
  "ANN", # annotation presence
  "D",   # docstrings
  "TID", # import conventions / banned APIs
]
ignore = [
  "D100", # undocumented public module
  "D104", # undocumented public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports.banned-api]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

# ----------
# Type checker
# ----------
[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "**/node_modules", "**/.*"]
pythonVersion = "3.12"
reportMissingTypeStubs = "warning"
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."
